fixes: - issue with icon size on hitting browser's back button - letter spacing in program address.. - size of search bar as it's in design..

--- a/assets/styles/mixins.scss
+++ b/assets/styles/mixins.scss
@@ -61,6 +61,12 @@
   }
 }
 
+@mixin ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @keyframes blur-in {
   0% {
     opacity: 0;
