--- a/components/SearchInput/index.module.scss
+++ b/components/SearchInput/index.module.scss
@@ -14,13 +14,14 @@
   @include gradient-border;
 
   .icon {
-    height: 1.5rem;
-    width: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     color: white;
     background: linear-gradient(94.28deg, #4383ff -15.13%, #6a5cff 107.24%);
     box-shadow: 0px 1px 2px rgba(26, 57, 137, 0.38);
     border-radius: 40px;
     padding: 0.5rem;
+    box-sizing: border-box;
   }
 
   .input {
@@ -32,9 +33,10 @@
     font-size: 1.125rem;
     color: #1a3989;
 
-    &:global(::placeholder) {
+    &:global(::placeholder-shown) {
       color: #1a3989;
       opacity: 0.64;
+      text-overflow: ellipsis;
     }
   }
 
@@ -43,6 +45,12 @@
 
     @media screen and (max-width: 480px) {
       width: 20rem;
+    }
+
+    @media screen and (max-width: 640px) {
+      .input {
+        margin-left: 0.5rem;
+      }
     }
   }
 }
