--- a/pages/programs/components/ProgramAddressInput/ProgramAddressInput.module.scss
+++ b/pages/programs/components/ProgramAddressInput/ProgramAddressInput.module.scss
@@ -21,30 +21,27 @@
 .search {
   position: relative;
 
-  &:global {
-    width: 33.625rem;
+  &:global(.dashboardInput) {
+    width: 42.625rem !important;
 
-    @media screen and (max-width: 640px) {
-      width: 25rem;
-    }
-
-    @media screen and (max-width: 480px) {
-      width: 20rem;
-    }
-  }
-
-  :global {
     svg {
-      width: 2rem !important;
-      height: 2rem !important;
       background: none !important;
       box-shadow: none !important;
       color: #1a3989 !important;
-      transform: scale(1.5);
+    }
+    input {
+      width: calc(100% - 10.3rem);
     }
 
-    input {
-      width: calc(100% - 3.5rem);
+    @media screen and (max-width: 640px) {
+      width: 25rem !important;
+      input {
+        width: calc(100% - 6.5rem);
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      width: 20rem !important;
     }
   }
 }
@@ -62,6 +59,15 @@
   :global {
     svg {
       display: none;
+    }
+
+    @media screen and (max-width: 640px) {
+      span {
+        display: none;
+      }
+      svg {
+        display: inline;
+      }
     }
   }
 }
